Update JaxenXPathExpression.java